# cpp_unit_tests_learning

./: .gitignore
src/: CMakeLists.txt  Logger.cpp  Logger.hpp  Notifier.cpp  Notifier.hpp  SchoolEntities.cpp  SchoolEntities.hpp  main.cpp
src/tests/: CMakeLists.txt  PaymentLogicTests.cpp  PupilsTests.cpp  SchoolTests.cpp  main.cpp
